# MSVCRenamer

./: CMakeLists.txt  LICENSE.txt  README.md
MSVCRenamer/: CMakeLists.txt  MSVCRenamer.cpp  MSVCRenamer.h
src/: file_tools.cpp  file_tools.h  main.cpp  sln_processor.cpp  sln_processor.h
